# low-level-playground

os/my-mikanos/: .gitignore  CMakeLists.txt
os/my-mikanos/MikanLoaderPkg/: Main.c
os/my-mikanos/chap1/: .gitignore  Makefile  hello.c  hello.efi
os/my-mikanos/kernel/: Makefile  console.cpp  console.h  elf.h  error.h  font.cpp  font.h  frame_buffer_config.h  io.asm  io.h  libcxx_support.cpp  logger.cpp  logger.h  main.cpp  mouse.cpp  mouse.h  newlib_support.c  pci.cpp  pci.h  pixel_writer.cpp  pixel_writer.h  register.h
os/my-mikanos/kernel/usb/: arraymap.hpp  descriptor.hpp  device.cpp  device.hpp  endpoint.hpp  memory.cpp  memory.hpp  setupdata.hpp
os/my-mikanos/kernel/usb/classdriver/: base.cpp  base.hpp  cdc.cpp  cdc.hpp  hid.cpp  hid.hpp  keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp
os/my-mikanos/kernel/usb/xhci/: context.hpp  device.cpp  device.hpp  devmgr.cpp  devmgr.hpp  port.cpp  port.hpp  registers.cpp  registers.hpp  ring.cpp  ring.hpp  speed.hpp  trb.cpp  trb.hpp  xhci.cpp  xhci.hpp
os/my-mikanos/scripts/: qemu.sh  run.sh  usb.sh
